--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 </div>
 
 
-<h2>Selected Publications [Find full list at <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en">Google Scholar</a>]</h2>
+<!-- <h2>Selected Publications [Find full list at <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en">Google Scholar</a>]</h2>
 	<!-- <p><font face="Arial" size="4"><b>2023</b></font></p> -->
 	<ul>
 
@@ -379,8 +379,8 @@
 </tbody></table>
 * indicates equal contribution; † indicates corresponding authorship.
 
-
-<h2>Selected Awards</h2>
+ -->
+<!-- <h2>Selected Awards</h2>
 <table style="border-spacing:2px">
 	
 		<tbody>
@@ -397,9 +397,9 @@
     	<!--<tr><td> National Scholarship in China, 2013,2014</td></tr>
     	<tr><td> Outstanding Graduates of Northeastern University, 2015</td></tr>-->
 	</tbody>
-</table>
+</table> -->
 
-<h2>Team</h2>
+<!-- <h2>Team</h2>
 	<b>Current Students:</b>
 	<br>	
 	<table style="border-spacing:2px">
@@ -424,10 +424,10 @@
 	<tr><td> Xueying Shi (2021 Ph.D. CUHK), Current: Huawei</td></tr>
 	</tbody>
 	</table>
-<br>
+<br> -->
 
 
-<h2>Professional Services</h2>
+<!-- <h2>Professional Services</h2>
 
 <li>	
 	<b>Conference Services:</b>
@@ -449,9 +449,9 @@
 	Medical Image Computing and Computer Assisted Intervention (MICCAI)<br>
 	ACM International Conference on Multimedia (ACM MM)<br>
 	<p style="margin-top:3px"></p>		
-</li>
+</li> -->
 
-<li>
+<!-- <li>
     <b>Regular Journal Reviewer:</b>
 	<br>
 	Medical Image Analysis (MedIA)<br>
@@ -466,8 +466,8 @@
 	Computer Methods and Programs in Biomedicine (CMPB)<br>
 	<p style="margin-top:3px"></p>		
 </li>
-
-<h2>Selected Talks</h2>
+ -->
+<!-- <h2>Selected Talks</h2>
 <li>Towards AI-powered Robotic Surgical Vision.<br>
 Woman in Medical Image Understanding and Analysis, University of Cambridge, UK, Jul. 2022.
 </li>
@@ -486,7 +486,7 @@ Theme-based Research Scheme Symposium on Image-guided Robotic Surgery, CUHK,  No
 <li>Towards Intelligent Surgery: Dynamic Surgical Video Analysis with Deep Learning.<br>
 The 5th World Chinese Microbial Ecology and Intelligent Endoscopy Summit, Xiamen, Nov. 2019.
 </li>
-
+ -->
 <h2>Teaching</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
