--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 	</div>        
 	<br>
-        &copy; Yueming Jin | Last updated: Dec 2022
-     
+        This repository is forked from [Yueming Jin]
+     	© [Qian He], 2023
       </center></p>
 
 
