--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
 	</div>        
 	<br>
-        This repository is forked from [Yueming Jin]
-     	© [Qian He], 2023
+        This repository is forked from [Yueming Jin]<br>
+	© [Qian He], 2023
       </center></p>
 
 
