--- a/index.html
+++ b/index.html
@@ -5,22 +5,10 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Yueming Jin, Jin Yueming, Yueming, BME, ECE, NUS, National University of Singapore, CSE, CUHK, The Chinese University of Hong Kong, WEISS, UCL, University College London"> 
-<meta name="description" content="Yueming Jin&#39;s home page">
-<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
-<meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
+<meta name="keywords" content="Qian He, SICE, UESTC, University of Electronic Science and Technology of China"> 
+<meta name="description" content="Qian He&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Yueming Jin&#39;s Homepage</title>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-87320911-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 </head>
 <body>
 <div id="layout-content" style="margin-top:25px">
@@ -32,7 +20,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Yueming Jin</h1><h1>
+					<h1>Qian He</h1><h1>
 				</h1></div>
 
 				<h3>Assistant Professor</h3>
