--- a/index.html
+++ b/index.html
@@ -23,17 +23,15 @@
 					<h1>Qian He</h1><h1>
 				</h1></div>
 
-				<h3>Assistant Professor</h3>
+				<h3>Professor</h3>
 				<p>
-					Department of Biomedical Engineering <br>
-					Department of Electrical and Computer Engineering <br>
-					National University of Singapore (NUS) <br>
+					School of Information and Communication Engineering <br>
+					University of Electronic Science and Technology of China (UESTC) <br>
 					<br>
-					Office: Block E7, #05-01H, NUS, Singapore 119276 <br>
-					Email: ymjin AT nus.edu.sg
+					Email: qianhe AT uestc.edu.cn
 				</p>
 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
-					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
+<!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
 					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
@@ -43,17 +41,18 @@
 		</tr><tr>
 	</tr></tbody>
 </table>
-<h2>Biography </h2>
-<p>
+<!-- <h2>Biography </h2> -->
+<!-- <p>
 	I am an Assistant Professor at <a href="https://cde.nus.edu.sg/bme/">Department of Biomedical Engineering</a> and <a href="https://cde.nus.edu.sg/ece/">Department of Electrical and Computer Engineering</a> at <a href="https://nus.edu.sg/">National University of Singapore</a>. Before joining NUS, I was a senior research fellow at the <a href="https://www.ucl.ac.uk/computer-science/">Department of Computer Science</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, working with <a href="https://www.ucl.ac.uk/surgical-robot-vision/people/danail-stoyanov">Prof. Danail Stoyanov</a>. I received my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, advised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. 
-</p>
+</p> -->
 
-<p>My research interests include artificial intelligence and its applications on medical image computing, robotic surgical data science. I recently work on spatial-temporal representation learning, data efficient learning, and multi-modality learning.</p>
+<!-- <p>My research interests include artificial intelligence and its applications on medical image computing, robotic surgical data science. I recently work on spatial-temporal representation learning, data efficient learning, and multi-modality learning.</p> -->
 <!--<p>My research interests include medical image computing, robotic video perception and artificial intelligence. Specifically, I am dedicated to developing learning algorithms for complex time-series medical data analysis, applied primarily to endoscopy and robotic surgery. I recently work on data efficient learning to minimize human annotation.</p>-->
 
-<p style="color:red;"> <b>*Opening!*</b> I am looking for PhD(2024Spring&Fall)/Postdoc/RA/Interns, who are interested in machine learning, medical image analysis, surgical 2D/3D vision, surgical robotic intelligence. Students with strong self-motivation and publication record are preferred. Welcome to email me after reading the <b><a href="./files/JobDescription_1221.pdf">details</a></b>. </p>
+<p style="color:red;">for Members-at-Large</p>
+<p style="color:red;">to the Board of Governors, IEEE Signal Processing Society (SPS)</p>
 
-<p>If you are an NUS student interested in doing research with me, also feel free to drop me an email!</p>
+<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p>
 
 
 
