--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="Qian He, SICE, UESTC, University of Electronic Science and Technology of China"> 
 <meta name="description" content="Qian He&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Yueming Jin&#39;s Homepage</title>
+<title>Qian He&#39;s Homepage</title>
 </head>
 <body>
 <div id="layout-content" style="margin-top:25px">
@@ -30,13 +30,13 @@
 					<br>
 					Email: qianhe AT uestc.edu.cn
 				</p>
-				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
+<!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
-					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a>
+<!-- 					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a> -->
 				</p>
 			</td>
 			<td>
-				<img src="./pic/skylarJY2.jpg" border="0" width="200"><br>
+				<img src="./pic/HQ.png" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -49,7 +49,7 @@
 <!-- <p>My research interests include artificial intelligence and its applications on medical image computing, robotic surgical data science. I recently work on spatial-temporal representation learning, data efficient learning, and multi-modality learning.</p> -->
 <!--<p>My research interests include medical image computing, robotic video perception and artificial intelligence. Specifically, I am dedicated to developing learning algorithms for complex time-series medical data analysis, applied primarily to endoscopy and robotic surgery. I recently work on data efficient learning to minimize human annotation.</p>-->
 
-<p style="color:red;">for Members-at-Large</p>
+<p style="color:red;">For Members-at-Large</p>
 <p style="color:red;">to the Board of Governors, IEEE Signal Processing Society (SPS)</p>
 
 <p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p>
