--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 <!-- <p>My research interests include artificial intelligence and its applications on medical image computing, robotic surgical data science. I recently work on spatial-temporal representation learning, data efficient learning, and multi-modality learning.</p> -->
 <!--<p>My research interests include medical image computing, robotic video perception and artificial intelligence. Specifically, I am dedicated to developing learning algorithms for complex time-series medical data analysis, applied primarily to endoscopy and robotic surgery. I recently work on data efficient learning to minimize human annotation.</p>-->
 
-<p style="color:red;">For Members-at-Large</p>
-<p style="color:red;">to the Board of Governors, IEEE Signal Processing Society (SPS)</p>
+<p style="color:red;">For Members-at-Large <br>
+to the Board of Governors, IEEE Signal Processing Society (SPS)
+</p>
 
 <p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p>
 
