--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="./pic/HQ.png" border="0" width="200"><br>
+				<img src="./pic/HQ.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -86,17 +86,11 @@ to the Board of Governors, IEEE Signal Processing Society (SPS)
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<p><center>
-      	<div id="clustrmaps-widget" style="width:10%">
-      		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=va-L6lHdAAU-pnGRWuo4n-3yc0GsyFLqhzS0NLNX8Lk"></script>
-      		<noscript><a href='https://clustrmaps.com/site/xfn5'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=pT8r_ZMBBdBPTv7KnlTCiBDylmHyi1qsWdPpY_tIlqY'/></a></noscript>
-
-
-	</div>        
-	<br>
-        This repository is forked from [Yueming Jin]<br>
-	© [Qian He], 2023
-      </center></p>
+<p><center>     
+<br>
+This repository is forked from [Yueming Jin]<br>
+© [Qian He], 2023
+</center></p>
 
 
 </div>
