--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<h1>Qian He</h1><h1>
 				</h1></div>
 
-				<h3>Professor</h3>
+				<h3>Professor, IEEE Senior Member</h3>
 				<p>
 					School of Information and Communication Engineering <br>
 					University of Electronic Science and Technology of China (UESTC) <br>
