--- a/index.html
+++ b/index.html
@@ -54,26 +54,36 @@ to the Board of Governors, IEEE Signal Processing Society (SPS)
 
 
 
-<h3>Teaching</h3>
-<table id="tbTeaching" border="0" width="100%">
+<h3>SPS SERVICES</h3>
+<h3>SPS SERVICES</h3>
+<table id="sps-services" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2023-2024</td><td>Fall</td><td>BN5211 Medical Robotics</td>
+			<td>2014-2018</td><td>Associate Editor for IEEE Signal Processing Letters</td>
 		</tr>
 		<tr>
-			<td> 2015-2016</td><td>Fall</td><td>ESTR1934 Digital Logic and Systems</td>
+			<td>2015-2021</td><td>Sensor Array and Multichannel Signal Processing (SAM) Technical Committee member</td>
 		</tr>
 		<tr>
-			<td> 2015-2016</td><td>Spring</td><td>CSCI1930 Data Structures</td>
+			<td>2017-2020</td><td>Chair of IEEE SPS Chengdu Chapter</td>
 		</tr>
 		<tr>
-			<td> 2016-2017</td><td>Fall</td><td>CSCI3260 Principles of Computer Graphics</td>
+			<td>2020</td><td>Technical Co-Chair of IEEE 11th SAM Workshop held virtually in Hangzhou, China</td>
 		</tr>
         	<tr>
-			<td> 2016-2017</td><td>Spring</td><td>CSCI1930 Data Structures</td>
+			<td>2021-2022</td><td>PROmotinG DiveRsity in Signal Processing (PROGRESS) Organizing Committee member</td>
 		</tr>
 		<tr>
-			<td> 2017-2018</td><td>Fall</td><td>CSCI3260 Principles of Computer Graphics</td>
+			<td>2021-current</td><td>IEEE SPS Young Professionals (YP) Committee member</td>
+		</tr>
+		<tr>
+			<td>2021-current</td><td>Chair of YP Engagement and Career Training Subcommittee</td>
+		</tr>
+		<tr>
+			<td>2023-current</td><td>Signal Processing Theory and Methods (SPTM) Technical Committee member</td>
+		</tr>
+		<tr>
+			<td>2023-current</td><td>Regional officer for Region 10 in SPTM TC</td>
 		</tr>
 	</tbody>
 </table>
