--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ to the Board of Governors, IEEE Signal Processing Society (SPS)
 			<td>2023-current</td><td>Signal Processing Theory and Methods (SPTM) Technical Committee member</td>
 		</tr>
 		<tr>
-			<td>2023-current</td><td>Regional officer for Region 10 in SPTM TC</td>
+			<td>2023-current</td><td>Regional officer for Region 10 (Asia and Pacific) in SPTM TC</td>
 		</tr>
 	</tbody>
 </table>
