--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-<p><center>     
+<!-- <p><center>     
 <br>
 This repository is forked from [Yueming Jin]<br>
 © [Qian He], 2023
-</center></p>
+</center></p> -->
 
 
 </div>
