--- a/index.html
+++ b/index.html
@@ -88,15 +88,13 @@
 
 
 
-<div id="footer">
+<!-- <div id="footer">
 	<div id="footer-text"></div>
-</div>
+</div> -->
 <!-- <p><center>     
 <br>
 This repository is forked from [Yueming Jin]<br>
 © [Qian He], 2023
 </center></p> -->
-
-
-</div>
+<!-- </div> -->
 </body></html>
