--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<td>2020</td><td>Technical Co-Chair of IEEE 11th SAM Workshop held virtually in Hangzhou, China</td>
 		</tr>
         	<tr>
-			<td>2021-2022</td><td>PROmotinG DiveRsity in Signal Processing (PROGRESS) Organizing Committee member</td>
+			<td>2021-2022</td><td>PROmotinG DiveRsity in Signal ProcESSing (PROGRESS) Organizing Committee member</td>
 		</tr>
 		<tr>
 			<td>2021-current</td><td>IEEE SPS Young Professionals (YP) Committee member</td>
