--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
 
 
 
-<!-- <div id="footer">
+<div id="footer">
 	<div id="footer-text"></div>
-</div> -->
+</div>
 <!-- <p><center>     
 <br>
 This repository is forked from [Yueming Jin]<br>
