--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 
 
 <div id="footer">
-	<div id="footer-text"></div>
+	<div id="footer-text">
+		PLEASE VOTE at <a href="http://www.baidu.com">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+	</div>
 </div>
 <!-- <p><center>     
 <br>
