--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 				</p> -->
-				<p style="color:red;">For Members-at-Large <br>
+				<p style="color:red;">for Members-at-Large <br>
 				to the Board of Governors, IEEE Signal Processing Society (SPS)
 				</p>
 				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p>
