--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
 </table>
 
 <div id="footer">
-	<div id="footer-text">
-		PLEASE VOTE at <a href="http://www.baidu.com">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
-	</div>
+    <div id="footer-text">
+        PLEASE VOTE at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+    </div>
 </div>
+
 <!-- <p><center>     
 <br>
 This repository is forked from [Yueming Jin]<br>
