--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Qian He</h1><h1>
+					<h1>Qian He, Professor</h1><h1>
 				</h1></div>
-
-				<h3>Professor, IEEE Senior Member</h3>
-				<p>
+<!-- 				<h3>Professor, IEEE Senior Member</h3> -->
+<!-- 				<p>
 					School of Information and Communication Engineering <br>
 					University of Electronic Science and Technology of China (UESTC) <br>
 					<br>
 					Email: qianhe AT uestc.edu.cn
-				</p>
+				</p> -->
 <!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a> -->
@@ -35,10 +34,10 @@
 				<p style="color:red;">for Members-at-Large <br>
 				to the Board of Governors, IEEE Signal Processing Society (SPS)
 				</p>
-				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p>
+<!-- 				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p> -->
 			</td>
 			<td>
-				<img src="./pic/HQ.jpg" border="0" width="175"><br>
+				<img src="./pic/HQ.jpg" border="0" width="150"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
@@ -51,8 +50,11 @@
 <!-- <p>My research interests include artificial intelligence and its applications on medical image computing, robotic surgical data science. I recently work on spatial-temporal representation learning, data efficient learning, and multi-modality learning.</p> -->
 <!--<p>My research interests include medical image computing, robotic video perception and artificial intelligence. Specifically, I am dedicated to developing learning algorithms for complex time-series medical data analysis, applied primarily to endoscopy and robotic surgery. I recently work on data efficient learning to minimize human annotation.</p>-->
 
-
-
+<h2>GOAL</h2>
+<p>
+To plow SPS garden deeper for reaping more fruits of collective growth and joy.
+</p>
+	
 <h2>SPS SERVICES</h2>
 <table id="sps-services" border="0" width="100%">
 	<tbody>
@@ -86,11 +88,16 @@
 	</tbody>
 </table>
 
-<div id="footer">
+<h2>PLEASE VOTE</h2>
+<p>
+at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+</p>
+
+<!-- <div id="footer">
     <div id="footer-text">
         PLEASE VOTE at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
     </div>
-</div>
+</div> -->
 
 <!-- <p><center>     
 <br>
