--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@ To plow SPS garden deeper for reaping more fruits of collective growth and joy.
 	</tbody>
 </table>
 
-<h2>PLEASE VOTE</h2>
+<h2>VOTE FOR ME</h2>
 <p>
-Vote for me at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+Please vote at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
 </p>
 
 <!-- <div id="footer">
