--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <h2>GOAL</h2>
 <p>
-To plow SPS garden deeper for reaping more fruits of collective growth and joy.
+To plow SPS garden deeper for reaping more fruits of collective growth and joy
 </p>
 	
 <h2>SPS SERVICES</h2>
