--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Qian He, SICE, UESTC, University of Electronic Science and Technology of China"> 
-<meta name="description" content="Qian He&#39;s home page">
+<meta name="keywords" content="Qian HE, SICE, UESTC, University of Electronic Science and Technology of China"> 
+<meta name="description" content="Qian HE&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>Qian He&#39;s Homepage</title>
 </head>
@@ -18,7 +18,7 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Qian He, Professor</h1><h1>
+					<h1>Qian HE, Professor</h1><h1>
 				</h1></div>
 <!-- 				<h3>Professor, IEEE Senior Member</h3> -->
 				<p>
