--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="Qian HE, SICE, UESTC, University of Electronic Science and Technology of China"> 
 <meta name="description" content="Qian HE&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Qian He&#39;s Homepage</title>
+<title>Qian HE&#39;s Homepage</title>
 </head>
 <body>
 <div id="layout-content" style="margin-top:25px">
