--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ To plow SPS garden deeper for reaping more fruits of collective growth and joy
 
 <h2>VOTE FOR ME</h2>
 <p>
-Please vote at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+Please vote at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023).
 </p>
 
 <!-- <div id="footer">
