--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 		<tr>
 			<td width="670">
 				<div id="toptitle">					
-					<h1>Qian HE, Professor</h1><h1>
+					<h1>Qian HE, Ph.D.</h1><h1>
 				</h1></div>
 <!-- 				<h3>Professor, IEEE Senior Member</h3> -->
 				<p>
-					University of Electronic Science and Technology of China (UESTC) <br>
+					<h3>Professor, University of Electronic Science and Technology of China (UESTC)</h3>
 				</p>
 <!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
