--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</h1></div>
 <!-- 				<h3>Professor, IEEE Senior Member</h3> -->
 				<p>
-					<h3>Professor, University of Electronic Science and Technology of China (UESTC)</h3>
+					Professor, University of Electronic Science and Technology of China (UESTC)
 				</p>
 <!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
