--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</p>
 <!-- 				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p> -->
 			</td>
-			<td>
+			<td style="padding-top:20px">
 				<img src="./pic/HQ3.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
