--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</h1></div>
 <!-- 				<h3>Professor, IEEE Senior Member</h3> -->
 				<p>
-					Professor, University of Electronic Science and Technology of China (UESTC)
+					Professor, University of Electronic Science and Technology of China
 				</p>
 <!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
 <!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
@@ -33,7 +33,7 @@
 				</p>
 <!-- 				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p> -->
 			</td>
-			<td style="padding-top:20px">
+			<td style="margin-top:100px">
 				<img src="./pic/HQ3.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
@@ -87,7 +87,7 @@ To plow SPS garden deeper for reaping more fruits of collective growth and joy
 
 <h2>VOTE FOR ME</h2>
 <p>
-Please vote at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+Please vote at <a href="https://eballot4.votenet.com/IEEE" style="color: red;">https://eballot4.votenet.com/IEEE</a> (Election Period: Aug 15 - Oct 2, 2023)
 </p>
 
 <!-- <div id="footer">
