--- a/index.html
+++ b/index.html
@@ -14,30 +14,23 @@
 <div id="layout-content" style="margin-top:100px">
 
 <table>
-	<tbody>
-		<tr>
-			<td width="670">
-				<div id="toptitle">					
-					<h1>Qian HE, Ph.D.</h1><h1>
-				</h1></div>
-<!-- 				<h3>Professor, IEEE Senior Member</h3> -->
-				<p>
-					Professor, University of Electronic Science and Technology of China
-				</p>
-<!-- 				<p> <a href="https://scholar.google.com/citations?user=s_kbB4oAAAAJ&hl=en"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a> -->
-<!-- 					<a href="https://github.com/YuemingJin"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a> -->
-<!-- 					<a href="https://orcid.org/0000-0003-3775-3877"><img src="./pic/orcid.jpeg" height="30px" style="margin-bottom:-3px"></a> -->
-<!-- 				</p> -->
-				<p style="color:red;">for Members-at-Large <br>
-				to the Board of Governors, IEEE Signal Processing Society (SPS)
-				</p>
-<!-- 				<p>GOAL: To plow SPS garden deeper for reaping more fruits of collective growth and joy</p> -->
-			</td>
-			<td style="margin-top:100px">
-				<img src="./pic/HQ3.jpg" border="0" width="200"><br>
-			</td>
-		</tr><tr>
-	</tr></tbody>
+  <tr>
+    <td width="670">
+      <div id="toptitle">					
+        <h1>Qian HE, Ph.D.</h1>
+      </div>
+      <p>
+        Professor, University of Electronic Science and Technology of China
+      </p>
+      <p style="color:red;">for Members-at-Large <br>
+      to the Board of Governors, IEEE Signal Processing Society (SPS)
+      </p>
+    </td>
+    <td valign="bottom">
+      <!-- 图片垂直对齐方式设置为底部 -->
+      <img src="./pic/HQ3.jpg" border="0" width="200"><br>
+    </td>
+  </tr>
 </table>
 <!-- <h2>Biography </h2> -->
 <!-- <p>
