--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
       to the Board of Governors, IEEE Signal Processing Society (SPS)
       </p>
     </td>
-    <td valign="bottom">
-      <!-- 图片垂直对齐方式设置为底部 -->
+  </tr>
+  <tr>
+    <td></td>
+    <td style="text-align: center;">
       <img src="./pic/HQ3.jpg" border="0" width="200"><br>
     </td>
   </tr>
 </table>
+
 <!-- <h2>Biography </h2> -->
 <!-- <p>
 	I am an Assistant Professor at <a href="https://cde.nus.edu.sg/bme/">Department of Biomedical Engineering</a> and <a href="https://cde.nus.edu.sg/ece/">Department of Electrical and Computer Engineering</a> at <a href="https://nus.edu.sg/">National University of Singapore</a>. Before joining NUS, I was a senior research fellow at the <a href="https://www.ucl.ac.uk/computer-science/">Department of Computer Science</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, working with <a href="https://www.ucl.ac.uk/surgical-robot-vision/people/danail-stoyanov">Prof. Danail Stoyanov</a>. I received my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, advised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. 
