--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
       to the Board of Governors, IEEE Signal Processing Society (SPS)
       </p>
     </td>
-  </tr>
-  <tr>
-    <td></td>
-    <td style="text-align: center;">
+    <td valign="top">
+      <!-- 使用 valign="top" 来实现图片顶端与文字顶端对齐 -->
       <img src="./pic/HQ3.jpg" border="0" width="200"><br>
     </td>
   </tr>
