--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
       to the Board of Governors, IEEE Signal Processing Society (SPS)
       </p>
     </td>
-    <td valign="top">
-      <!-- 使用 valign="top" 来实现图片顶端与文字顶端对齐 -->
+    <td>
+      <!-- 占位单元格，确保图片与文字顶端对齐 -->
+      <div style="height: 30px;"></div>
       <img src="./pic/HQ3.jpg" border="0" width="200"><br>
     </td>
   </tr>
