--- a/index.html
+++ b/index.html
@@ -13,27 +13,32 @@
 <body>
 <div id="layout-content" style="margin-top:100px">
 
-<table>
-  <tr>
-    <td width="670">
-      <div id="toptitle">					
-        <h1>Qian HE, Ph.D.</h1>
-      </div>
-      <p>
-        Professor, University of Electronic Science and Technology of China
-      </p>
-      <p style="color:red;">for Members-at-Large <br>
-      to the Board of Governors, IEEE Signal Processing Society (SPS)
-      </p>
-    </td>
-    <td>
-      <!-- 占位单元格，确保图片与文字顶端对齐 -->
-      <div style="height: 30px;"></div>
-      <img src="./pic/HQ3.jpg" border="0" width="200"><br>
-    </td>
-  </tr>
-</table>
-
+<div class="table-container">
+  <div class="text-section">
+    <!-- 左边的文字内容 -->
+    <table>
+      <tbody>
+        <tr>
+          <td>
+            <div id="toptitle">					
+              <h1>Qian HE, Ph.D.</h1>
+            </div>
+            <p>
+              Professor, University of Electronic Science and Technology of China
+            </p>
+            <p style="color:red;">for Members-at-Large <br>
+            to the Board of Governors, IEEE Signal Processing Society (SPS)
+            </p>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="image-section">
+    <!-- 右边的图片 -->
+    <img src="./pic/HQ3.jpg" border="0" width="200"><br>
+  </div>
+</div>
 <!-- <h2>Biography </h2> -->
 <!-- <p>
 	I am an Assistant Professor at <a href="https://cde.nus.edu.sg/bme/">Department of Biomedical Engineering</a> and <a href="https://cde.nus.edu.sg/ece/">Department of Electrical and Computer Engineering</a> at <a href="https://nus.edu.sg/">National University of Singapore</a>. Before joining NUS, I was a senior research fellow at the <a href="https://www.ucl.ac.uk/computer-science/">Department of Computer Science</a>, <a href="https://www.ucl.ac.uk/">University College London</a>, working with <a href="https://www.ucl.ac.uk/surgical-robot-vision/people/danail-stoyanov">Prof. Danail Stoyanov</a>. I received my Ph.D. degree in the <a href="http://www.cse.cuhk.edu.hk/">Department of Computer Science and Engineering</a>, <a href="http://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>, advised by <a href="http://www.cse.cuhk.edu.hk/~pheng" target="_blank">Prof. Pheng-Ann Heng</a> and <a href="http://www.cse.cuhk.edu.hk/~cwfu" target="_blank">Prof. Chi-Wing Fu</a>. 
