--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 
 <!-- <div class="table-container"> 
   <div class="text-section"> -->
-<div> 
-  <div>
     <!-- 左边的文字内容 -->
-    <table>
+<!--     <table>
       <tbody>
         <tr>
           <td>
@@ -29,18 +27,38 @@
               Professor, University of Electronic Science and Technology of China
             </p>
             <p style="color:red;">for Members-at-Large <br>
-            to the Board of Governors, IEEE Signal Processing Society (SPS)
-            </p>
+            to the Board of Governors, IEEE Signal Processing Society (SPS) -->
+<!--             </p>
           </td>
         </tr>
       </tbody>
     </table>
-  </div>
-  <div class="image-section">
+  </div> --> -->
+<!--   <div class="image-section"> -->
     <!-- 右边的图片 -->
-    <img src="./pic/HQ3.jpg" border="0" width="180"><br>
-  </div>
-</div>
+<!--     <img src="./pic/HQ3.jpg" border="0" width="180"><br>
+<!--   </div>
+</div> -->
+
+<table>
+  <tr>
+    <td width="670">
+      <div id="toptitle">					
+        <h1>Qian HE, Ph.D.</h1>
+      </div>
+      <p>
+        Professor, University of Electronic Science and Technology of China
+      </p>
+      <p style="color:red;">for Members-at-Large <br>
+      to the Board of Governors, IEEE Signal Processing Society (SPS)
+      </p>
+    </td>
+    <td valign="bottom">
+      <!-- 图片垂直对齐方式设置为底部 -->
+      <img src="./pic/HQ3.jpg" border="0" width="200"><br>
+    </td>
+  </tr>
+</table>
 
 <!-- <h2>Biography </h2> -->
 <!-- <p>
