--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
       <p>
         Professor, University of Electronic Science and Technology of China
       </p>
-      <p style="color:red;">for Members-at-Large <br>
+      <p style="color:#c45911;"> for Members-at-Large <br>
       to the Board of Governors, IEEE Signal Processing Society (SPS)
       </p>
     </td>
     <td valign="bottom">
       <!-- 图片垂直对齐方式设置为底部 -->
-      <img src="./pic/HQ3.jpg" border="0" width="180"><br>
+      <img src="./pic/HQ.jpg" border="0" width="180"><br>
     </td>
   </tr>
 </table>
@@ -86,7 +86,7 @@ Please vote at <a href="https://eballot4.votenet.com/IEEE" style="color: red;">h
 
 <!-- <div id="footer">
     <div id="footer-text">
-        PLEASE VOTE at <a href="http://www.baidu.com" style="color: red;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
+        PLEASE VOTE at <a href="http://www.baidu.com" style="color:#c45911;">www.baidu.com</a> (Election Period: Aug 15 - Oct 2, 2023)
     </div>
 </div> -->
 
