--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ To plow SPS garden deeper for reaping more fruits of collective growth and joy
 
 <h2>VOTE FOR ME</h2>
 <p>
-Please vote at <a href="https://eballot4.votenet.com/IEEE" style="color: red;">https://eballot4.votenet.com/IEEE</a> (Election Period: Aug 15 - Oct 2, 2023)
+Please vote at <a href="https://eballot4.votenet.com/IEEE" style="color:#c45911;">https://eballot4.votenet.com/IEEE</a> (Election Period: Aug 15 - Oct 2, 2023)
 </p>
 
 <!-- <div id="footer">
